# trading-os

./: .gitignore  ADVERSARIAL_REVIEW_KILL_REPORT.md  SCRATCHPAD.md  STOP_TRADING.example  data_lake.py  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt  runtime_controls.py  runtime_safety.py  trading_os_autopsy_nextgen.md
bridge/: ChartBootstrapService.mq5  FileBridgeEA.mq5  FileBridgeEA_Windows.mq5  compile_bridge.ps1  compile_on_windows.bat  context_mcp_server.py  mcp_order_router.py  mcp_protocol.py  mcp_tool_gate.py  mt5_headless.sh  mt5_ipc_engine.py  mt5_ipc_protocol.py  mt5_mcp_server.py  setup_bridge.py  setup_bridge_simple.bat  setup_bridge_windows.bat
calendar/: daily.md  weekly.md
config/: chart_manifest.json  dream_lab.yaml  hooks.yaml  instruments.yaml  llm.yaml  llm_ensemble.yaml  macro_lexicon.yaml  secrets.yaml.template  stock_research.yaml  strategy_params.yaml  strategy_search.yaml  swarm-config.yaml
consciousness/: dashboard.py  event_bus_stream.py  monitor.py  scribe_daemon.py  traces.py  trader_panels.py
cortex/: adk_runner.py  agent.py  agent_schemas.py  brain_market_context.py  brain_signal_context.py  decision_guard.py  event_radar.py  instrument_registry.py  live_policy.py  llm_client.py  llm_status.py  macro_lexicon.py  macro_risk_policy.py  main.py  market_intelligence.py  news_macro_gate.py  news_orchestrator.py  signal_generator.py  signal_generator_v2.py  stock_universe.py  strategies.json  strategy_performance.py  strategy_registry.py
docs/: AUTONOMY_ROADMAP.md  MT5_CHART_BOOTSTRAP.md
immune/: anomaly.py  main.py  provenance.py  risk_limits.json
(+324 files in other folders)
